# eurorust-starter

./: Cargo.toml  README.md  build.rs  flake.nix
drone-challenge-rl/: README.md  drone.proto  drone_checkpoint_798.pt  drone_checkpoint_864.pt  drone_checkpoint_final.pt  drone_pb2.py  drone_pb2.pyi  drone_pb2_grpc.py  requirements.txt  train_ppo.py
proto/: drone.proto
src/: main.rs
